# Soundux-mod

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_flatpak.yml  compile_arch.yml  compile_linux.yml  compile_windows.yml  linux_debug.yml  upload_binaries_to_draft.yml  upload_full_src.yml  windows_debug.yml
css/: app.ae380f56.css
deployment/aur/soundux-mod/: .SRCINFO  PKGBUILD
deployment/aur/soundux-mod-git/: .SRCINFO  PKGBUILD
deployment/pacman/: PKGBUILD
js/: app.2c18cf02.js
src/: main.cpp
src/core/config/: config.cpp
src/core/hotkeys/: hotkeys.hpp
src/core/hotkeys/linux/: x11.cpp
src/core/objects/: settings.hpp
src/helper/audio/linux/: app_name.hpp  backend.cpp
src/helper/audio/linux/pipewire/: pipewire.cpp  pipewire.hpp
src/helper/audio/linux/pulseaudio/: forward.cpp  forward.hpp  pulseaudio.cpp  pulseaudio.hpp
src/helper/icons/: icons.cpp
src/helper/json/: bindings.hpp
src/helper/version/: check.cpp
src/helper/ytdl/: youtube-dl.cpp  youtube-dl.hpp
src/ui/: ui.cpp
src/ui/impl/webview/: webview.cpp  webview.hpp
tray/src/core/linux/: tray.cpp
webview/include/core/: basewindow.hpp
webview/include/core/linux/: window.hpp
webview/src/core/: basewindow.cpp
webview/src/core/linux/: window.cpp
